--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
         <a href="https://www.inboundcycle.com/" class="website-link" target="_blank">InboundCycle</a>
         <a href="http://www.wcodez.com/" class="website-link" target="_blank">Webcodez Infoway</a>
         <a href="http://www.giantfocal.com/" class="website-link" target="_blank">Giant Focal</a>
+        <a href="http://adeptodigital.com/" class="website-link" target="_blank">Adepto Digital</a>
+        <a href="https://www.xzito.com/" class="website-link" target="_blank">Xzito</a>
         <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
+        <a href="https://en.24-7.co.jp/" class="website-link" target="_blank">24-7</a>
+
       </div>
     </div>
   </header>
