--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Magra" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Hubspot Partners</title>
 </head>
 <body>
   <header class="header">
@@ -14,16 +14,36 @@
       <h1 class="header-title">List of Hubspot Partner Agencies</h1>
       <p class="page-description">Click on the button to see agency's website:</p>
       <div class="links-container">
-        <a href="https://www.hubspothero.com/" class="website-link" target="_blank">Hubspot Hero</a>
-        <a href="https://www.flightmedia.co/" class="website-link" target="_blank">Flight Media</a>
-        <a href="http://www.psdtohubspot.com/" class="website-link" target="_blank">PSDToHubspot</a>
-        <a href="https://www.inboundcycle.com/" class="website-link" target="_blank">InboundCycle</a>
-        <a href="http://www.wcodez.com/" class="website-link" target="_blank">Webcodez Infoway</a>
-        <a href="http://www.giantfocal.com/" class="website-link" target="_blank">Giant Focal</a>
-        <a href="http://adeptodigital.com/" class="website-link" target="_blank">Adepto Digital</a>
-        <a href="https://www.xzito.com/" class="website-link" target="_blank">Xzito</a>
-        <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
-        <a href="https://en.24-7.co.jp/" class="website-link" target="_blank">24-7</a>
+        <div class="link-wrapper">
+          <a href="https://www.hubspothero.com/" class="website-link" target="_blank">Hubspot Hero</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="https://www.flightmedia.co/" class="website-link" target="_blank">Flight Media</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="http://www.psdtohubspot.com/" class="website-link" target="_blank">PSDToHubspot</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="https://www.inboundcycle.com/" class="website-link" target="_blank">InboundCycle</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="http://www.wcodez.com/" class="website-link" target="_blank">Webcodez Infoway</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="http://www.giantfocal.com/" class="website-link" target="_blank">Giant Focal</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="http://adeptodigital.com/" class="website-link" target="_blank">Adepto Digital</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="https://www.xzito.com/" class="website-link" target="_blank">Xzito</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="http://www.brandbuildersolutions.com/" class="website-link" target="_blank">Brand Builder Solutions</a>
+        </div>
+        <div class="link-wrapper">
+          <a href="https://en.24-7.co.jp/" class="website-link" target="_blank">24-7</a>
+        </div>
 
       </div>
     </div>
